2005-02-26  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_epoch.at: Even more paranoid.
	* tests/t_epoch_server.at: New test.
	* testsuite.at: Add it.
	
2005-02-21  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_epoch.at: Check that netsync only sends relevant
	epochs, and be a little more paranoid.

2005-02-19  Nathaniel Smith  <njs@codesourcery.com>

	* revision.cc (struct anc_graph): Fixup after merge.

2005-02-18  graydon hoare  <graydon@pobox.com>

	* database.cc (set_epoch): Fix SQL.
	* monotone.texi (Rebuilding ancestry): Reword a bit.
	* netcmd.{cc,hh} 
	({read,write}_hello_cmd_payload): Transfer server key with hello.
	({read,write}_confirm_cmd_payload): Transfer epoch list with confirm.
	* netsync.cc: Adapt to changes in netcmd.
	(rebuild_merkle_trees): Set nonexistent epochs to zero before sync.
	* revision.cc (anc_graph): Randomize epochs on rebuild.
	* tests/t_epoch.at: Fix up to test slightly new semantics.

2005-02-07  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.1: Add more db commands.
	* monotone.texi: Document db rebuild.  Add section on rebuilding
	ancestry and epochs.

2005-02-06  graydon hoare  <graydon@pobox.com>

	* commands.cc (db): Add epoch commands.
	(list): Likewise.
	Also remove some unneeded transaction guards.
	* database.{cc,hh} (get_epochs): New function.
	(set_epoch): Likewise.
	(clear_epoch): Likewise.
	Also remove all persistent merkle trie stuff.
	* schema.sql: Add epochs, remove tries.
	* schema_migration.cc: Update.
	* tests/t_epoch.at: New test.
	* tests/t_migrate_schema.at: Update.
	* testsuite.at: Add some new helpers, call t_epoch.at.
	* vocab.hh (epoch_id): Define.
	* vocab_terms.hh (epoch): Define.

2005-02-05  Nathaniel Smith  <njs@codesourcery.com>

	* merkle_tree.hh: Remove mcert_item and fcert_item, rename
	rcert_item to cert_item, renumber to remove gaps left.
	* merkle_tree.cc (netcmd_item_type_to_string):
	* netcmd.cc (read_netcmd_item_type): 
	* netsync.cc: Adjust accordingly.
	