@@ -447,3 +447,4 @@ m4_include(tests/t_automate_heads.at)
 m4_include(tests/t_merge_normalization_edge_case.at)
 m4_include(tests/t_epoch.at)
 m4_include(tests/t_epoch_server.at)
+m4_include(tests/t_epoch_unidirectional.at)
